<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.account_kit.AccountKitActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_account_signin"
        style="@style/ButtonStyle"
        android:text="@string/sign_in" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_account_signin_authorization_code"
        style="@style/ButtonStyle"
        android:text="@string/signin_authorization_code" />

    <Button
        android:id="@+id/btn_account_silent_signin"
        style="@style/ButtonStyle"
        android:text="@string/silent_sign_in" />

    <Button
        android:id="@+id/btn_account_signout"
        style="@style/ButtonStyle"
        android:text="@string/sign_out" />

    <Button
        android:id="@+id/cancel_authorization"
        style="@style/ButtonStyle"
        android:text="@string/cancel_authorization" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/tv_logger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.appcompat.widget.LinearLayoutCompat>
